--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,6 @@ include_directories(${CMAKE_SOURCE_DIR}/Game/Ressources)
 file(GLOB_RECURSE ENGINE_SOURCES *.cpp *.c)
 file(GLOB_RECURSE ENGINE_HEADERS *.hpp *.h)
 
-add_executable(AimBoost ${ENGINE_SOURCES} ${ENGINE_HEADERS} Sources/game.cpp Headers/game.h Sources/map.cpp Headers/map.h Sources/player.cpp Headers/player.h Headers/main.h Headers/event.h)
+add_executable(AimBoost ${ENGINE_SOURCES} ${ENGINE_HEADERS} Sources/game.cpp Headers/game.h Sources/map.cpp Headers/map.h Sources/player.cpp Headers/player.h Headers/main.h)
 
 target_link_libraries(AimBoost sdl2)
